# agentic-starter-kits

./: .gitignore  guide-local-agent-to-vllm-on-cluster.md  run_llama_server.yaml
agents/a2a_langgraph_crewai/: .dockerignore  Dockerfile  README.md  crew_a2a_server.py  deploy.sh  entrypoint.sh  langgraph_a2a_server.py  pyproject.toml  template.env
agents/a2a_langgraph_crewai/k8s/: deployment-crew.yaml  deployment-langgraph.yaml  route-crew.yaml  route-langgraph.yaml  service-crew.yaml  service-langgraph.yaml
agents/autogen/mcp_agent/: README.md  deploy.sh  init.sh  main.py  template.env
agents/autogen/mcp_agent/mcp_automl_template/: AUTOML_DEPLOYMENT.md  README.md  deploy_mcp.sh  mcp_server.py  utils.py
agents/base/autogen_agent/: README.md  deploy.sh  main.py
agents/base/autogen_agent/k8s/: deployment.yaml
agents/base/autogen_agent/mcp_automl_template/: Dockerfile  deploy_mcp.sh  interact_with_mcp.py  pyproject.toml  register_tools.py  tools_config.yaml  utils.py
agents/base/langgraph_react_agent/: README.md  init.sh  main.py  pyproject.toml  requirements.txt
agents/base/langgraph_react_agent/src/langgraph_react_agent_base/: tools.py
agents/base/llamaindex_websearch_agent/: main.py
agents/base/openai_responses_agent/: README.md  main.py
agents/community/langgraph_agentic_rag/: init.sh  main.py  pyproject.toml  requirements.txt
agents/community/langgraph_agentic_rag/data/: load_documents.py
agents/community/langgraph_agentic_rag/k8s/: deployment.yaml
agents/community/langgraph_agentic_rag/src/langgraph_agentic_rag/: tools.py
agents/community/langgraph_agentic_rag/tests/: test_tools.py
agents/community/langgraph_react_with_database_memory/: README.md  main.py  pyproject.toml  requirements.txt
agents/crewai/websearch_agent/: Dockerfile  Makefile  README.md  main.py
agents/crewai/websearch_agent/playground/: app.py
agents/demo/: README.md
agents/demo/langgraph_outdoor_activity_agent/: README.md  cleanup-cluster.sh  cleanup-local.sh  deploy-cluster.sh  deploy-local.sh  deploy.sh  init.sh  main.py  pyproject.toml  requirements.txt  setup-cluster.sh
agents/demo/langgraph_outdoor_activity_agent/examples/: _interactive_chat.py  ai_service.py  execute_ai_service_locally.py
agents/demo/langgraph_outdoor_activity_agent/k8s/: deployment.yaml  ollama-deployment.yaml  ollama-service.yaml  route.yaml  service.yaml
agents/demo/langgraph_outdoor_activity_agent/src/langgraph_outdoor_activity_agent/: agent.py  tools.py
agents/google/adk/: .env.example  Makefile  README.md  deploy.sh  main.py  pyproject.toml
agents/google/adk/playground/: app.py
agents/langflow/: README.md
agents/langflow/simple_tool_calling_agent/: Makefile  README.md  agent.yaml  cleanup-local.sh  deploy-local.sh
agents/langflow/simple_tool_calling_agent/local/: .env.example  podman-compose.yml
agents/langgraph/agentic_rag/: pyproject.toml
agents/langgraph/agentic_rag/data/: load_documents.py
agents/langgraph/agentic_rag/playground/: app.py
agents/langgraph/human_in_the_loop/: README.md  main.py
agents/langgraph/react_agent/: README.md  pyproject.toml
agents/langgraph/react_agent/playground/: app.py
agents/langgraph/react_with_database_memory/: pyproject.toml
agents/langgraph/react_with_database_memory/playground/: app.py
agents/llamaindex/websearch_agent/: README.md  main.py
agents/llamaindex/websearch_agent/playground/: app.py
agents/vanilla_python/openai_responses_agent/: README.md  main.py
docs/: adding-a-new-agent.md  local-development.md
examples/: README.md
(+13 files in other folders)
