[tool.poetry]
name = "langgraph_react_agent_base"
version = "0.1.0"
description = "A template for a LangGraph LLM app deployable on RHOAI Cloud as an ai_service. This particular example focues on an AutoX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "langgraph_react_agent_base", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
fastapi = ">=0.129.0"
uvicorn = {extras = ["standard"], version = ">=0.41.0"}
langchain = ">=1.2.10"
langchain-openai = ">=1.1.10"
langgraph-prebuilt = ">=1.0.8"
llama-stack = ">=0.5.0"
openai = ">=2.24.0"
milvus-lite = ">=2.5.1"
python-dotenv = ">=1.2.2"
setuptools = ">=80.9.0,<82.0.0"
pytest = ">=9.0.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.eval.dependencies]
unitxt = "^1.24.0"
datasets = "3.6.0"
nltk = "^3.9.1"
rouge-score = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
